--- a/realtymgmt/src/main/resources/templates/taskclosed.html
+++ b/realtymgmt/src/main/resources/templates/taskclosed.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Getting Started: Handling Form Submission</title>
+    <title>Task Closed</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 	<h2>Task Closed</h2>
     <p th:text="'task reference number: ' + ${task.taskId}" />
+    <a th:href="@{'/contact/home?email='+${task.contact.user.emailAddress}}">home</a>
+    <form th:action = "@{/logout}" method = "post">
+         <input type = "submit" value = "Sign Out"/>
+      </form>
 </body>
 </html> 
