--- a/realtymgmt/src/main/resources/templates/taskform.html
+++ b/realtymgmt/src/main/resources/templates/taskform.html
@@ -15,6 +15,7 @@
         	<input type="hidden" name="tenantId" th:value="${tenant.tenantId}" />
         	<input type="hidden" name="ownerId" th:value="${tenant.owner.ownerId}" />
         	<input type="submit" value="Submit" /> <input type="reset" value="Reset" />
+        	<a th:href="@{'/tenant/home?email='+${tenant.user.emailAddress}}">go back</a>
         </p>
     </form>
 </body>
